# CROcashi

./: .env  .gitignore  2q  Makefile  README.md  README.md.bak  alembic.ini  audit_ncfd.sql  docker-compose.prod.yml  docker-compose.yml  env.exmaple  pyproject.toml  test_phase1_debug.py  test_real_langextract.py  training.csv  working_e2e_results_20250823_040318.json  working_e2e_results_20250823_040329.json  working_e2e_results_20250823_040642.json  working_e2e_results_20250823_040753.json
ncfd/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.prod  Makefile  Makefile.bak  Makefile.bak.bak  README.md  alembic.ini  docker-compose.yml  env.example  env.prod.dev  env.prod.example  pyproject.toml  review-loop.sh  test_db_schema_smoke.py  test_lanextract_smoke.py  test_schema_validation.py  test_validator_smoke.py
ncfd/alembic/: env.py
ncfd/config/: config.yaml  gate_lrs.yaml  pipeline_config.yaml  resolver.yaml
ncfd/docs/: DEVELOPER_QUICK_REFERENCE.md  ORCHESTRATOR_README.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_QUICK_REFERENCE.md  PHASE_9_COMPLETION_SUMMARY.md  PHASE_9_IMPLEMENTATION_GUIDE.md  PHASE_9_QUICK_REFERENCE.md  PROJECT_STATUS_SUMMARY.md  SMOKE_TEST_RESULTS.md  TODO_COMPLETION_PROOF.md  code_review_response.md  cursor_complete_implementation.md  db_triggers_schema_fixes.md  fixes_completion_report.md  heuristics_promotion_fixes.md  langextract_adapter_fixes.md  phase4_code_review.md  phase4_complete_implementation.md  phase_4_implementation_summary.md  phase_5_implementation_summary.md  phase_6_implementation_summary.md  run_final_test.py  (+10 more)
(+300 files in other folders)
